# crafting-interpreters

./: crafting-interpreters.opam  dune-project
_build/: .db  .digest-db  log
_build/default/: crafting-interpreters.dune-package  crafting-interpreters.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmi  dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: crafting_interpreters.cma  crafting_interpreters.cmxa  crafting_interpreters.cmxs  crafting_interpreters.ml-gen  lexer.ml  parser.ml
_build/default/lib/.crafting_interpreters.objs/: crafting_interpreters__Lexer.impl.d
_build/default/lib/.crafting_interpreters.objs/byte/: crafting_interpreters.cmi  crafting_interpreters.cmo  crafting_interpreters.cmt  crafting_interpreters__Lexer.cmi  crafting_interpreters__Lexer.cmo  crafting_interpreters__Lexer.cmt
_build/default/lib/.crafting_interpreters.objs/native/: crafting_interpreters.cmx  crafting_interpreters__Lexer.cmx
_build/default/lib/.merlin-conf/: lib-crafting_interpreters
_build/default/test/.merlin-conf/: exe-test_crafting_interpreters
_build/default/test/.test_crafting_interpreters.eobjs/byte/: dune__exe__Test_crafting_interpreters.cmi  dune__exe__Test_crafting_interpreters.cmti
_build/default/test/.test_crafting_interpreters.eobjs/native/: dune__exe__Test_crafting_interpreters.cmx
lib/: .parser.ml.swp  dune  lexer.ml  parser.ml
ocaml/: eval.ml
test/: .test_crafting_interpreters.ml.swp  dune  test_crafting_interpreters.ml
(+3 files in other folders)
