(lang dune 3.14)

(name crafting-interpreters)

(generate_opam_files true)

(source
 (github kennylwe/crafting-interpreters))

(authors "Kenny Lee <kenjlee09@gmail.com>")

(maintainers "Kenny Lee <kenjlee09@gmail.com>")


(package
 (name crafting-interpreters)
 (synopsis "Learning how to craft interpreters")
 (description "Hello World")
 (depends ocaml)
 (tags
  ("interpreters" "coding" )))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
